--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
               Contact
               </a>
             </div>
+            <div class="right_link" id="selection3">
+              <a href="../wp_themes/blog.html" style="text-decoration: none; color: white;">
+              Blog
+              </a>
+            </div>
           </div>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
